# AtlasTerminal

./: .env.example  .gitignore  AtlasTerminal.bat  AtlasTerminal.sh  README.md  launcher.py  pyproject.toml  run_backend.bat  run_backend.sh  run_frontend.bat  run_frontend.sh
atlas_app/backend/: __init__.py  config.py  deps.py  main.py
atlas_app/backend/routers/: energy.py  events.py  map_layers.py  query.py  research.py  vessels.py  weather.py
atlas_app/backend/services/: scheduler.py
atlas_app/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
atlas_app/frontend/src/: App.tsx  index.css  main.tsx
atlas_app/frontend/src/api/: client.ts
atlas_app/frontend/src/components/analytics/: AnalyticsWorkspace.tsx
atlas_app/frontend/src/components/drilldown/: CausalDrilldown.tsx
atlas_app/frontend/src/components/feed/: EventTape.tsx
atlas_app/frontend/src/components/layout/: ApiErrorBanner.tsx  ErrorBoundary.tsx  SettingsModal.tsx  TopBar.tsx
atlas_app/frontend/src/hooks/: useBackendHealth.ts  useWebSocket.ts
atlas_app/frontend/src/store/: index.ts
atlas_core/: __init__.py  config.py  exceptions.py
atlas_core/alerts/: __init__.py  engine.py  rules.py
atlas_core/connectors/: __init__.py  ais.py  base.py  eia.py  gdelt.py  nasa_firms.py  noaa_cdo.py  noaa_ndbc.py  noaa_nws.py  noaa_swpc.py  opensky.py
atlas_core/features/: __init__.py  energy.py  spatial.py  weather.py
atlas_core/research/: __init__.py  backtest.py  event_study.py  factor_model.py
atlas_core/schemas/: __init__.py  energy.py  events.py  geo.py  market.py  vessels.py  weather.py
atlas_core/signals/: __init__.py  base.py  composite.py  congestion.py  fire_exposure.py  news_flow.py  storage_surprise.py  weather_risk.py
atlas_core/store/: __init__.py  duckdb_store.py  parquet_cache.py
atlas_core/utils/: __init__.py  geo.py  math.py  time.py
tests/: conftest.py
tests/test_backend/: test_api_routes.py
tests/test_connectors/: test_base_connector.py  test_eia_connector.py  test_firms_connector.py  test_nws_connector.py
tests/test_features/: test_energy_features.py  test_spatial_features.py  test_weather_features.py
tests/test_research/: test_backtest.py  test_event_study.py  test_factor_model.py
tests/test_signals/: test_fire_signal.py  test_storage_surprise_signal.py  test_weather_signal.py
tests/test_store/: test_duckdb_store.py
tests/test_utils/: test_geo.py  test_math.py
(+3 files in other folders)
