[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-core"
version = "0.1.0"
description = "Physical Commodities Intelligence Terminal — core library"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Atlas Terminal" }]
keywords = ["commodities", "energy", "weather", "geospatial", "intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # HTTP / async
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=16.0.0",
    "duckdb>=1.0.0",
    # Schema / config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Geo
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    # Stats
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.0",
    # Scheduling
    "apscheduler>=3.10.4",
    # Logging
    "loguru>=0.7.2",
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx",  # for TestClient
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
server = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "starlette-context>=0.3.6",
]

[project.scripts]
atlas = "atlas_core.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["atlas_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=atlas_core --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "PT", "RET", "SIM", "ARG"]
ignore = ["ANN101", "ANN102", "S101", "ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["atlas_core"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
fail_under = 60
# Note: connectors (EIA, NWS, NOAA, etc.) require live API keys and are excluded
# from automated coverage. Core library coverage target is 60%.
